misc/dev-support/docker/infrastructure/bridge/base/postgrest-deployment.yaml
#! postgrest-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgrest
    namespace: default-infrastructure
    labels:
        com.docker.compose.project: default_infrastructure
        com.docker.compose.service: postgrest
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: default_infrastructure
            com.docker.compose.service: postgrest
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: default_infrastructure
                com.docker.compose.service: postgrest
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: postgrest
                  image: docker-postgrest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: postgrest-3000
                      containerPort: 3000
