misc/dev-support/docker/infrastructure/bridge/base/postgrest-expose.yaml
#! postgrest-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgrest
    namespace: default-infrastructure
    labels:
        com.docker.compose.project: default_infrastructure
        com.docker.compose.service: postgrest
spec:
    selector:
        com.docker.compose.project: default_infrastructure
        com.docker.compose.service: postgrest
    ports:
        - name: postgrest-3000
          port: 3000
          targetPort: postgrest-3000
